@@ -61,10 +61,19 @@
                       <small id="fileHelp" class="form-text text-muted">{{ trans('people.information_edit_max_size', ['size' => 10]) }}</small>
                   </div>
 
-                  <div class="form-group actions">
-                      <button id="upload" type="submit" class="btn btn-primary">{{ trans('app.upload') }}</button>
-                      <a href="/settings/import" class="btn btn-secondary">{{ trans('app.cancel') }}</a>
-                  </div> <!-- .form-group -->
+                <div class="form-group">
+                    <label for="behaviour">{{ trans('settings.import_upload_behaviour') }}</label>
+                    <select class="form-control" name="behaviour" id="behaviour">
+                        <option value="{{ \App\ImportJob::BEHAVIOUR_ADD }}" selected>{{ trans('settings.import_upload_behaviour_add') }}</option>
+                        <option value="{{ \App\ImportJob::BEHAVIOUR_REPLACE }}">{{ trans('settings.import_upload_behaviour_replace') }}</option>
+                    </select>
+                    <small id="behaviourHelp" class="form-text text-muted">{{ trans('settings.import_upload_behaviour_help') }}</small>
+                </div>
+
+                <div class="form-group actions">
+                    <button id="upload" type="submit" class="btn btn-primary">{{ trans('app.upload') }}</button>
+                    <a href="/settings/import" class="btn btn-secondary">{{ trans('app.cancel') }}</a>
+                </div> <!-- .form-group -->
               </form>
             </div>
           </div>
